fix: body overflow on load loading

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,11 @@
 
 * {
   box-sizing: border-box;
-  margin:0px;
-  padding:0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 body {
-  background-color:#0B0D17;
+  background-color: #0b0d17;
+  overflow: hidden;
 }
